re PR fortran/26891 (Automatic conversion for optional parameters of missing dummies)

2006-04-07  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/26891
	* trans.h : Prototype for gfc_conv_missing_dummy.
	* trans-expr (gfc_conv_missing_dummy): New function
	(gfc_conv_function_call): Call it and tidy up some of the code.
	* trans-intrinsic (gfc_conv_intrinsic_function_args): The same.

	PR fortran/26976
	* array.c (gfc_array_dimen_size): If available, return shape[dimen]
	* resolve.c (resolve_function): If available, use the argument shape
	for the function expression.
	* iresolve.c (gfc_resolve_transfer): Set shape[0] = size.


	PR fortran/26779
	*resolve.c (resolve_fl_procedure): Do not check the access of
	derived types for internal procedures.

2006-04-07  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/26891
	* gfortran.dg/missing_optional_dummy_1.f90: New test.

	PR fortran/26976
	* gfortran.dg/compliant_elemental_intrinsics_1.f90: New test.
	* gfortran.dg/initialization_1.f90: Make assignment compliant.
	* gfortran.dg/transfer_array_intrinsic_1.f90: Simplify.
	* gfortran.dg/transfer_array_intrinsic_2.f90: Make assignments
	compliant and detect bigendian-ness.

	PR fortran/26779
	* gfortran.dg/private_type_5.f90: New test.

From-SVN: r112748