gcc/fortran/resolve.c
@@ -1177,6 +1177,7 @@ resolve_function (gfc_expr * expr)
   const char *name;
   try t;
   int temp;
+  int i;
 
   sym = NULL;
   if (expr->symtree)
@@ -1277,6 +1278,12 @@ resolve_function (gfc_expr * expr)
 	  if (arg->expr != NULL && arg->expr->rank > 0)
 	    {
 	      expr->rank = arg->expr->rank;
+	      if (!expr->shape && arg->expr->shape)
+		{
+		  expr->shape = gfc_get_shape (expr->rank);
+		  for (i = 0; i < expr->rank; i++)
+		    mpz_init_set (expr->shape[i], arg->expr->shape[i]);
+	        }
 	      break;
 	    }
 	}
@@ -4711,9 +4718,13 @@ resolve_fl_procedure (gfc_symbol *sym, int mp_flag)
         }
     }
 
-  /* Ensure that derived type formal arguments of a public procedure
-     are not of a private type.  */
-  if (gfc_check_access(sym->attr.access, sym->ns->default_access))
+  /* Ensure that derived type for are not of a private type.  Internal
+     module procedures are excluded by 2.2.3.3 - ie. they are not
+     externally accessible and can access all the objects accesible in
+     the host. */
+  if (!(sym->ns->parent
+	    && sym->ns->parent->proc_name->attr.flavor == FL_MODULE)
+	&& gfc_check_access(sym->attr.access, sym->ns->default_access))
     {
       for (arg = sym->formal; arg; arg = arg->next)
 	{
