gcc/testsuite/gfortran.dg/initialization_1.f90
@@ -20,6 +20,7 @@ contains
 
     real(8) :: x (1:2, *)
     real(8) :: y (0:,:)
+    real(8) :: z (2,2)
 
 ! However, this gives a warning because it is an initialization expression.
     integer :: l1 = len (ch1)     ! { dg-warning "assumed character length variable" }
